// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render closed Place component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-3 border border-3 rounded shadow p-2 bg-light small"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <div
              class="col-md-10"
            >
              <p
                class="fw-bold text-center"
              >
                Place
              </p>
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <p
                  class="p-1 w-50 alert alert-danger text-center"
                >
                  Closed
                </p>
                <p
                  class="text-secondary"
                >
                  4.3 
                  <i
                    class="bi bi-star-fill text-warning"
                  />
                   (3037 votes)
                </p>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="bi bi-chevron-right btn btn-primary w-100 p-1"
              />
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <p
                class="m-0 text-secondary d-flex align-items-center"
              >
                <i
                  class="bi bi-card-text fs-4"
                />
                <span
                  class="mx-2"
                >
                  Contemporary all-day European dining
                </span>
              </p>
              <p
                class="m-0 text-secondary d-flex align-items-center"
              >
                <i
                  class="bi bi-clock fs-4"
                />
                <span
                  class="mx-2"
                >
                  Opens
                   11 PM
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-3 border border-3 rounded shadow p-2 bg-light small"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <div
            class="col-md-10"
          >
            <p
              class="fw-bold text-center"
            >
              Place
            </p>
            <div
              class="d-flex justify-content-between align-items-center"
            >
              <p
                class="p-1 w-50 alert alert-danger text-center"
              >
                Closed
              </p>
              <p
                class="text-secondary"
              >
                4.3 
                <i
                  class="bi bi-star-fill text-warning"
                />
                 (3037 votes)
              </p>
            </div>
          </div>
          <div
            class="col-md-2"
          >
            <button
              class="bi bi-chevron-right btn btn-primary w-100 p-1"
            />
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-12"
          >
            <p
              class="m-0 text-secondary d-flex align-items-center"
            >
              <i
                class="bi bi-card-text fs-4"
              />
              <span
                class="mx-2"
              >
                Contemporary all-day European dining
              </span>
            </p>
            <p
              class="m-0 text-secondary d-flex align-items-center"
            >
              <i
                class="bi bi-clock fs-4"
              />
              <span
                class="mx-2"
              >
                Opens
                 11 PM
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render open Place component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-3 border border-3 rounded shadow p-2 bg-light small"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <div
              class="col-md-10"
            >
              <p
                class="fw-bold text-center"
              >
                Place
              </p>
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <p
                  class="p-1 w-50 alert alert-success text-center"
                >
                  Open
                </p>
                <p
                  class="text-secondary"
                >
                  4.3 
                  <i
                    class="bi bi-star-fill text-warning"
                  />
                   (3037 votes)
                </p>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="bi bi-chevron-right btn btn-primary w-100 p-1"
              />
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <p
                class="m-0 text-secondary d-flex align-items-center"
              >
                <i
                  class="bi bi-card-text fs-4"
                />
                <span
                  class="mx-2"
                >
                  Contemporary all-day European dining
                </span>
              </p>
              <p
                class="m-0 text-secondary d-flex align-items-center"
              >
                <i
                  class="bi bi-clock fs-4"
                />
                <span
                  class="mx-2"
                >
                  Closes
                   11 PM
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-3 border border-3 rounded shadow p-2 bg-light small"
    >
      <div
        class="col-md-12"
      >
        <div
          class="row"
        >
          <div
            class="col-md-10"
          >
            <p
              class="fw-bold text-center"
            >
              Place
            </p>
            <div
              class="d-flex justify-content-between align-items-center"
            >
              <p
                class="p-1 w-50 alert alert-success text-center"
              >
                Open
              </p>
              <p
                class="text-secondary"
              >
                4.3 
                <i
                  class="bi bi-star-fill text-warning"
                />
                 (3037 votes)
              </p>
            </div>
          </div>
          <div
            class="col-md-2"
          >
            <button
              class="bi bi-chevron-right btn btn-primary w-100 p-1"
            />
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-12"
          >
            <p
              class="m-0 text-secondary d-flex align-items-center"
            >
              <i
                class="bi bi-card-text fs-4"
              />
              <span
                class="mx-2"
              >
                Contemporary all-day European dining
              </span>
            </p>
            <p
              class="m-0 text-secondary d-flex align-items-center"
            >
              <i
                class="bi bi-clock fs-4"
              />
              <span
                class="mx-2"
              >
                Closes
                 11 PM
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
